--- a/ajax-test/index.html
+++ b/ajax-test/index.html
@@ -2,18 +2,19 @@
 <html>
 
 <head>
-    <title>AJAX Test</title>
-    <script src="main.js"></script>
+	<title>AJAX Test</title>
+
 </head>
 
 <body>
-    <button onclick="writeToDocument('https://swapi.co/api/people')">People</button>
-    <button onclick="writeToDocument('https://swapi.co/api/planets')">Planets</button>
-    <button onclick="writeToDocument('https://swapi.co/api/species')">Species</button>
-    <button onclick="writeToDocument('https://swapi.co/api/starships')">Starship</button>
-    <button onclick="writeToDocument('https://swapi.co/api/vehicles')">Vehicles</button>
-    <button onclick="writeToDocument('https://swapi.co/api/films')">Films</button>
-    <div id="data"></div>
+	<button onclick="writeToDocument('https://swapi.dev/api/people/')">People</button>
+	<button onclick="writeToDocument('https://swapi.dev/api/planets/')">Planets</button>
+	<button onclick="writeToDocument('https://swapi.dev/api/species/')">Species</button>
+	<button onclick="writeToDocument('https://swapi.dev/api/starships/')">Starship</button>
+	<button onclick="writeToDocument('https://swapi.dev/api/vehicles/')">Vehicles</button>
+	<button onclick="writeToDocument('https://swapi.dev/api/films/')">Films</button>
+	<div id="data"></div>
+	<script src="main.js"></script>
 </body>
 
 </html>
